# qwen-dev-swarm

./: Dockerfile.sandbox  Inspiration copy.md  Inspiration.md  LICENSE  README copy.md  README.md  built_with.md  config.py  generated_script.py  inspiration.md  main.py  orchestrator.py  orchestrator_old.py  pyproject.toml  requirements.txt  sandbox.py  sandbox_old.py  test_connection.py  test_generated_script.py  test_guardrails.py  ui.py  ui_old.py
.streamlit/: config.toml
config/: __init__.py  settings.py
generated_codes/: fibonacci_sequence.py
scripts/: check_deps.sh
swarm/: agents.py  agents_old.py  guardrails.py  guardrails_old.py
tests/: test_agent_outputs.py  test_connection.py  test_generated_script.py  test_guardrails.py  test_json_parser.py  test_orchestrator.py  test_sandbox.py  test_ui.py
the_generated_scripts/: dynamic_data_pipeline.py  eratosthenes_algorithm.py  fibonacci_sequence.py  key_value.py  packet_analysis.py  rate-Limiter.py  statistical_analysis.py
